@@ -1,45 +1,67 @@
 package stryker4s
 
-import java.nio.file.Paths
+import java.nio.file.{Path, Paths}
 
+import better.files.File
+import org.mockito.captor.ArgCaptor
+import org.mockito.{ArgumentMatchersSugar, MockitoSugar}
+import org.scalatest.Inside
 import stryker4s.config.Config
-import stryker4s.model.{Killed, Mutant}
+import stryker4s.model.{Killed, Mutant, MutantRunResult, MutantRunResults}
 import stryker4s.mutants.Mutator
 import stryker4s.mutants.applymutants.{ActiveMutationContext, MatchBuilder, StatementTransformer}
-import stryker4s.mutants.findmutants.{FileCollector, MutantFinder, MutantMatcher}
-import stryker4s.run.process.{Command, ProcessMutantRunner, ProcessRunner}
+import stryker4s.mutants.findmutants.{FileCollector, MutantFinder, MutantMatcher, SourceCollector}
+import stryker4s.report.Reporter
+import stryker4s.run.MutantRunner
+import stryker4s.run.process.Command
 import stryker4s.run.threshold.SuccessStatus
 import stryker4s.scalatest.{FileUtil, LogMatchers}
 import stryker4s.testutil.Stryker4sSuite
-import stryker4s.testutil.stubs._
+import stryker4s.testutil.stubs.{TestProcessRunner, TestSourceCollector}
 
 import scala.util.Success
 
-class Stryker4sTest extends Stryker4sSuite with LogMatchers {
+class Stryker4sTest extends Stryker4sSuite with MockitoSugar with ArgumentMatchersSugar with Inside with LogMatchers {
+
+  class TestMutantRunner(sourceCollector: SourceCollector, reporter: Reporter)(implicit config: Config)
+      extends MutantRunner(sourceCollector, reporter) {
+    private[this] val stream = Iterator.from(0)
+
+    override def runMutant(mutant: Mutant, workingDir: File): Path => MutantRunResult =
+      path => Killed(Mutant(stream.next, null, null, null), path)
+    override def runInitialTest(workingDir: File): Boolean = true
+  }
 
   describe("run") {
+    val file = FileUtil.getResource("scalaFiles/simpleFile.scala")
+    val testFiles = Seq(file)
+    val testSourceCollector = new TestSourceCollector(testFiles)
+    val testProcessRunner = TestProcessRunner(Success(1), Success(1), Success(1), Success(1))
+    val reporterMock = mock[Reporter]
+
     it("should call mutate files and report the results") {
       implicit val conf: Config = Config(baseDir = FileUtil.getResource("scalaFiles"))
-      val file = FileUtil.getResource("scalaFiles/simpleFile.scala")
-      val testFiles = Seq(file)
-      val testSourceCollector = new TestSourceCollector(testFiles)
-      val testProcessRunner = TestProcessRunner(Success(1), Success(1), Success(1), Success(1))
-      val testMutantRunner =
-        new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, new FileCollector(testProcessRunner))
-      val testReporter = new TestReporter
+
+      val testMutantRunner = new TestMutantRunner(new FileCollector(testProcessRunner), reporterMock)
 
       val sut = new Stryker4s(
         testSourceCollector,
         new Mutator(new MutantFinder(new MutantMatcher),
                     new StatementTransformer,
                     new MatchBuilder(ActiveMutationContext.sysProps)),
-        testMutantRunner,
-        testReporter
+        testMutantRunner
       )
 
       val result = sut.run()
 
-      val reportedResults = testReporter.testMutantReporter.lastCall.value.results
+      val startCaptor = ArgCaptor[Mutant]
+      verify(reporterMock, times(4)).reportMutationStart(startCaptor)
+      startCaptor.values should matchPattern {
+        case List(Mutant(0, _, _, _), Mutant(1, _, _, _), Mutant(2, _, _, _), Mutant(3, _, _, _)) =>
+      }
+      val runResultCaptor = ArgCaptor[MutantRunResults]
+      verify(reporterMock).reportRunFinished(runResultCaptor)
+      val reportedResults = runResultCaptor.value.results
 
       val expectedPath = Paths.get("simpleFile.scala")
 
@@ -54,10 +76,7 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
 
     it("should log a warning when JVM max memory is too low") {
       implicit val conf: Config = Config()
-      val testSourceCollector = new TestSourceCollector(Seq())
-      val testProcessRunner = TestProcessRunner()
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-      val testReporter = new TestReporter
+      val testMutantRunner = new TestMutantRunner(testSourceCollector, reporterMock)
 
       val sut: Stryker4s =
         new Stryker4s(
@@ -65,8 +84,7 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
           new Mutator(new MutantFinder(new MutantMatcher),
                       new StatementTransformer,
                       new MatchBuilder(ActiveMutationContext.sysProps)),
-          testMutantRunner,
-          testReporter
+          testMutantRunner
         ) {
 
           override def jvmMemory2GBOrHigher: Boolean = false
@@ -74,17 +92,13 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
 
       sut.run()
 
-      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." shouldBe loggedAsWarning
-      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " shouldBe loggedAsWarning
-      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." shouldBe loggedAsWarning
+      "The JVM has less than 2GB memory available. We advise to allocate 4GB memory when running Stryker4s." shouldBe loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info on how to allocate more memory to the JVM." shouldBe loggedAsWarning
     }
 
     it("should not log a warning when JVM max memory is high enough") {
       implicit val conf: Config = Config()
-      val testSourceCollector = new TestSourceCollector(Seq())
-      val testProcessRunner = TestProcessRunner()
-      val testMutantRunner = new ProcessMutantRunner(Command("foo", "test"), testProcessRunner, testSourceCollector)
-      val testReporter = new TestReporter
+      val testMutantRunner = new TestMutantRunner(testSourceCollector, reporterMock)
 
       val sut: Stryker4s =
         new Stryker4s(
@@ -92,8 +106,7 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
           new Mutator(new MutantFinder(new MutantMatcher),
                       new StatementTransformer,
                       new MatchBuilder(ActiveMutationContext.sysProps)),
-          testMutantRunner,
-          testReporter
+          testMutantRunner
         ) {
 
           override def jvmMemory2GBOrHigher: Boolean = true
@@ -101,9 +114,8 @@ class Stryker4sTest extends Stryker4sSuite with LogMatchers {
 
       sut.run()
 
-      "The JVM has less than 2GB memory available. We advise increasing this to 4GB when running Stryker4s." should not be loggedAsWarning
-      "This can be done in sbt by setting an environment variable: SBT_OPTS=\"-XX:+CMSClassUnloadingEnabled -XX:MaxPermSize=4G -Xmx4G\" " should not be loggedAsWarning
-      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info." should not be loggedAsWarning
+      "The JVM has less than 2GB memory available. We advise to allocate 4GB memory when running Stryker4s." should not be loggedAsWarning
+      "Visit https://github.com/stryker-mutator/stryker4s#memory-usage for more info on how to allocate more memory to the JVM." should not be loggedAsWarning
     }
   }
 }
